Ensure links are visible on directory listing page

--- a/theme/source/puzzle.scss
+++ b/theme/source/puzzle.scss
@@ -77,6 +77,10 @@ $selectionColor: #fff;
 body {
   background-color: $backgroundColor;
   counter-reset: section;
+
+  > a {
+    color: $mainColor
+  }
 }
 
 .reveal {
